# foxar

./: .gitignore  README.md  example_app.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
foxar/: __init__.py  app.py  blueprints.py  csrf.py  request.py  response.py  signals.py  test_client.py  utils.py
test/: detailed_test.py  minimal_test.py  simple_print.py  simple_test.py  start_app.py  test_blueprints.py  test_context.py  test_error_handling.py  test_foxar.py  test_import.py  test_request.py  test_response.py  test_routing.py  test_session.py  test_templates.py
