[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "foxar"
keywords = ["fastapi", "flask", "compatibility", "web", "api", "foxar"]
dynamic = ["version"]

description = "Flask-style API layer running on FastAPI"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Shunianssy", email = "shunianssy@163.com" },
]

license = { text = "GNU Affero General Public License v3.0" }

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]


dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "starlette>=0.40.0,<0.49.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/shunianssy/foxar"
Repository = "https://github.com/shunianssy/foxar"